Added about, gallery and writings pages

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ a {
             <div class="flip">
               <div class="front-side"></div>
               <div class="back-side">
-                <a href="#">
+                <a href="about.html">
                   <div class="content">
                     <div class="loader"></div>
                     <div class="text">
@@ -223,7 +223,7 @@ a {
             <div class="flip">
               <div class="front-side"></div>
               <div class="back-side">
-                <a href="#">
+                <a href="gallery.html">
                   <div class="content">
                     <div class="loader"></div>
                     <div class="text">
@@ -238,7 +238,7 @@ a {
             <div class="flip">
               <div class="front-side"></div>
               <div class="back-side">
-                <a href="#">
+                <a href="writtings.html">
                   <div class="content">
                     <div class="loader"></div>
                     <div class="text">
