Adicionadas imagens teste

--- a/gallery.html
+++ b/gallery.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Willpine - About</title>
-    </head>
-    <body>
-        
-    </body>
+
+<head>
+    <title>Willpine - Gallery</title>
+    <link rel="stylesheet" type="text/css" href="gallery.css">
+</head>
+
+<body>
+    <div>
+        <ul class="gallery">
+            <li></li><li></li><li></li>
+            <li></li>
+        </ul>
+    </div>
+</body>
+
 </html>
