--- a/gallery.html
+++ b/gallery.html
@@ -7,11 +7,45 @@
 </head>
 
 <body>
-    <div>
-        <ul class="gallery">
-            <li></li><li></li><li></li>
-            <li></li>
-        </ul>
+    <script>
+        function lb(idx) {
+            //Show the slider wrapper
+            var ninjaSldr = document.getElementById("ninja-slider");
+            ninjaSldr.parentNode.style.display = "block";
+
+            //Then init the slider
+            //Note: The { initSliderByCallingInitFunc: true } option in the 
+            // ninja-slider.js tells the page not to initiate the slider
+            // unless the following init(idx) function is called.
+            nslider.init(idx);
+
+            //Then mimic clicking the fullscreen button to popup the modal
+            var fsBtn = document.getElementById("fsBtn");
+            fsBtn.click();
+        }
+
+        function fsIconClick(isFullscreen, ninjaSldr) {
+            //Note: fsIconClick is the default event handler of the fullscreen button
+            if (isFullscreen) {
+                ninjaSldr.parentNode.style.display = "none";
+            }
+        }
+    </script>
+
+    <div class="Título">
+        <h1>Gallery</h1>
+    </div>
+
+    <div class="images">
+        <div class="inDiv">
+            <img src="drawings/World 1Thumb.png" onclick="lb(0)">
+            <img src="drawings/HeirThumb.png" onclick="lb(1)">
+            <img src="drawings/World 1Thumb.png" onclick="lb(2)">
+            </br>
+            <img src="drawings/World 1Thumb.png" onclick="lb(3)">
+            <img src="drawings/World 1Thumb.png" onclick="lb(4)">
+            <img src="drawings/World 1Thumb.png" onclick="lb(5)">
+        </div>
     </div>
 </body>
 
