Started adding divs for the Writtings section

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ a {
             <div class="flip">
               <div class="front-side"></div>
               <div class="back-side">
-                <a href="about.html">
+                <a href="gallery.html#aboutSection">
                   <div class="content">
                     <div class="text">
                       <h3>About</h3>
@@ -214,7 +214,7 @@ a {
             <div class="flip">
               <div class="front-side"></div>
               <div class="back-side">
-                <a href="gallery.html">
+                <a href="gallery.html#gallerySection">
                   <div class="content">
                     <div class="loader"></div>
                     <div class="text">
@@ -229,7 +229,7 @@ a {
             <div class="flip">
               <div class="front-side"></div>
               <div class="back-side">
-                <a href="writtings.html">
+                <a href="gallery.html#writtingsSection">
                   <div class="content">
                     <div class="loader"></div>
                     <div class="text">
