--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ a {
 .gallery {
   list-style-type: none;
   height: 100%;
-  overflow: hidden;
+  overflow: visible;
 }
 .gallery li {
   float: left;
@@ -103,10 +103,6 @@ a {
 .gallery li:nth-child(1) .front-side {
   background-image:url('drawings/World 1.png');
 }
-.gallery li:nth-child(1) .loader {
-  border-top-color: #F39C12;
-  border-left-color: #F39C12;
-}
 .gallery li:nth-child(1) .text h3 {
   color: #F39C12;
 }
@@ -120,10 +116,6 @@ a {
 
 .gallery li:nth-child(3) .front-side {
   background-image: url('drawings/BroChat.png');
-}
-.gallery li:nth-child(3) .loader {
-  border-top-color: #424949;
-  border-left-color: #424949;
 }
 .gallery li:nth-child(3) .text h3 {
   color: #424949;
@@ -208,9 +200,8 @@ a {
             <div class="flip">
               <div class="front-side"></div>
               <div class="back-side">
-                <a href="#">
+                <a href="gallery.html#aboutSection">
                   <div class="content">
-                    <div class="loader"></div>
                     <div class="text">
                       <h3>About</h3>
                       </div>
@@ -223,7 +214,7 @@ a {
             <div class="flip">
               <div class="front-side"></div>
               <div class="back-side">
-                <a href="#">
+                <a href="gallery.html#gallerySection">
                   <div class="content">
                     <div class="loader"></div>
                     <div class="text">
@@ -238,7 +229,7 @@ a {
             <div class="flip">
               <div class="front-side"></div>
               <div class="back-side">
-                <a href="#">
+                <a href="gallery.html#writtingsSection">
                   <div class="content">
                     <div class="loader"></div>
                     <div class="text">
