--- a/gallery.html
+++ b/gallery.html
@@ -1,195 +1,3 @@
-<<<<<<< HEAD
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title>Willpine - Gallery</title>
-    <link href="home.css" rel="stylesheet">
-    <link href="gallery.css" rel="stylesheet">
-    <link href="writtings.css" rel="stylesheet" />
-    <link href="about.css" rel="stylesheet" />
-    <link href="resources/lightbox2-2.11.1/src/css/lightbox.css" rel="stylesheet" />
-
-    <nav id="navbar" class="sticky">
-        <a href=#homeSection>Home</a>
-        <a href="#gallerySection">Gallery</a>
-        <a href="#writtingsSection">Writtings</a>
-        <a href="#aboutSection">About</a>
-    </nav>
-</head>
-
-<body>
-    <!--Navigation bar-->
-    
-
-    <section id="homeSection">
-        <i>
-            <h1 class="titleName">Will Pine</h1>
-        </i>
-
-        <h3 class="intro">Introduction goes here</h3>
-
-        <section class="containerHome flexHome">
-            <a href=#gallerySection>
-                <div class="itemHome">
-                    <h3>Gallery</h3>
-                    <p>Some of the stuff</br> I'm kinda proud of</p>
-                </div>
-            </a>
-            <a href=#writtingsSection>
-                <div class="itemHome">
-                    <h3>Writtings</h3>
-                    <p>Story sketches, plans, thoughts, future projects,
-                        it is all here.</p>
-                </div>
-            </a>
-            <a href=#aboutSection>
-                <div class="itemHome">
-                    <h3>About</h3>
-                    <p>19 years aren't that much, but enough for an about me-section
-                        to exist.
-                    </p>
-                </div>
-            </a>
-        </section>
-    </section>
-    <!--The gallery Section-->
-    <section id="gallerySection" class="galleryClass">
-        <!--Título da página-->
-        <div class="TítuloG">
-            <h1>Gallery</h1>
-        </div>
-
-        <!--Imagens-->
-        <div class="images">
-            <div class="inDiv">
-                <div class="grid-image">
-                    <a href="drawings/World 1.png" data-lightbox="image-1" data-title="World 1">
-                        <img src="drawings/World 1Thumb.png"></a></div>
-                <div class="grid-image">
-                    <a href="drawings/Heir.png" data-lightbox="image-1" data-title="Heir">
-                        <img src="drawings/HeirThumb.png"></a></div>
-                <div class="grid-image">
-                    <a href="drawings/Agony.png" data-lightbox="image-1" data-title="Agony">
-                        <img src="drawings/AgonyThumb.png"></a></div>
-                <div class="grid-image">
-                    <a href="drawings/BattlePosition.png" data-lightbox="image-1" data-title="Battle Position">
-                        <img src="drawings/BattlePositionThumb.png"></a></div>
-                <div class="grid-image">
-
-
-                    <a href="drawings/Happy new year.png" data-lightbox="image-1" data-title="Happy new year">
-                        <img src="drawings/Happy new yearThumb.png"></a></div>
-                <div class="grid-image">
-                    <a href="drawings/Ocean Eyes.png" data-lightbox="image-1" data-title="Ocean Eyes">
-                        <img src="drawings/Ocean EyesThumb.png"></a></div>
-                <div class="grid-image">
-                    <a href="drawings/Samurai.png" data-lightbox="image-1" data-title="Samurai">
-                        <img src="drawings/SamuraiThumb.png"></a></div>
-                <div class="grid-image">
-                    <a href="drawings/Smile like you mean it.png" data-lightbox="image-1"
-                        data-title="Smile like you mean it">
-                        <img src="drawings/Smile like you mean itThumb.png"></a></div>
-                <div class="grid-image">
-
-
-                    <a href="drawings/Stranded Jeremy.png" data-lightbox="image-1" data-title="Stranded Jeremy">
-                        <img src="drawings/Stranded JeremyThumb.png"></a></div>
-                <div class="grid-image">
-
-
-                    <a href="drawings/Anna Sleeping.png" data-lightbox="image-1" data-title="Anna Awakens">
-                        <img src="drawings/Anna SleepingThumb.png"></a></div>
-                <div class="grid-image">
-                    <a href="drawings/Anna.png" data-lightbox="image-1" data-title="Anna">
-                        <img src="drawings/AnnaThumb.png"></a></div>
-                <div class="grid-image">
-                    <a href="drawings/Auto Pilot.png" data-lightbox="image-1" data-title="Auto Pilot">
-                        <img src="drawings/Auto PilotThumb.png"></a></div>
-                <div class="grid-image">
-
-
-                    <a href="drawings/Transplarent.png" data-lightbox="image-1" data-title="Transplarent">
-                        <img src="drawings/TransplarentThumb.png"></a></div>
-                <div class="grid-image">
-                    <a href="drawings/White_Runner.png" data-lightbox="image-1" data-title="White_Runner">
-                        <img src="drawings/White_RunnerThumb.png"></a></div>
-                <div class="grid-image">
-                    <a href="drawings/GFace.png" data-lightbox="image-1" data-title="GFace">
-                        <img src="drawings/GFaceThumb.png"></a></div>
-                <div class="grid-image">
-
-
-                    <a href="drawings/BokunoWallpaper.png" data-lightbox="image-1" data-title="BokunoWallpaper">
-                        <img src="drawings/BokunoWallpaperThumb.png"></a></div>
-                <div class="grid-image">
-
-                    <a href="drawings/Buttons.png" data-lightbox="image-1" data-title="Buttons">
-                        <img src="drawings/ButtonsThumb.png"></a></div>
-                <div class="grid-image">
-                    <a href="drawings/Dropping rose.png" data-lightbox="image-1" data-title="Dropping rose">
-                        <img src="drawings/Dropping roseThumb.png"></a></div>
-                <div class="grid-image">
-
-
-                    <a href="drawings/Jetpack.png" data-lightbox="image-1" data-title=Jetpack">
-                        <img src="drawings/JetpackThumb.png"></a></div>
-                <div class="grid-image">
-                    <a href="drawings/Sora.png" data-lightbox="image-1" data-title="Sora">
-                        <img src="drawings/SoraThumb.png"></a></div>
-                <div class="grid-image">
-
-                    <a href="drawings/Hers01.png" data-lightbox="image-1" data-title="Hers01">
-                        <img src="drawings/Hers01Thumb.png"></a></div>
-                <div class="grid-image">
-
-
-                    <a href="drawings/Cyberpunk revolution.png" data-lightbox="image-1"
-                        data-title="Cyberpunk revolution">
-                        <img src="drawings/Cyberpunk revolutionThumb.png"></a></div>
-                <div class="grid-image">
-                    <a href="drawings/Wiu.png" data-lightbox="image-1" data-title="Wiu">
-                        <img src="drawings/WiuThumb.png"></a></div>
-                <div class="grid-image">
-                    <a href="drawings/Lollita.png" data-lightbox="image-1" data-title="Lollita">
-                        <img src="drawings/LollitaThumb.png"></a></div>
-            </div>
-        </div>
-    </section>
-    <!--The Writtings Section-->
-    <section id="writtingsSection">
-
-        <div class="divWrittings">
-
-            <div class="TítuloW">
-                <h1>Writtings</h1>
-            </div>
-
-            <section class="container flex">
-                <div class="item">Lovecraft Maybe</div>
-                <div class="item">Gurren Lagann Maybe</div>
-                <div class="item">Drawing Maybe</div>
-            </section>
-
-        </div>
-    </section>
-
-    <!--The about me Section-->
-    <section id="aboutSection">
-        <div class="divAbout" id="divAboutId">
-
-            <div class="TítuloA">
-                <h1>About</h1>
-            </div>
-
-        </div>
-    </section>
-
-    <script src="resources/lightbox2-2.11.1/dist/js/lightbox-plus-jquery.js"></script>
-    
-</body>
-
-=======
 <!DOCTYPE html>
 <html>
 
@@ -218,29 +26,32 @@
 
         <h3 class="intro">Introduction goes here</h3>
 
-        <section class="containerHome flexHome">
-            <a href=#gallerySection>
-                <div class="itemHome">
-                    <h3>Gallery</h3>
-                    <p>Some of the stuff</br> I'm kinda proud of</p>
+        <div class="homeContainer">
+            <div class="homeContainer2">
+
+                <div class="child1">
+                    <a href=#gallerySection class="child1">
+                        <div class="link">
+
+                        </div>
+                    </a>
                 </div>
-            </a>
-            <a href=#writtingsSection>
-                <div class="itemHome">
-                    <h3>Writtings</h3>
-                    <p>Story sketches, plans, thoughts, future projects,
-                        it is all here.</p>
+                <div class="child2">
+                    <a href=#writtingsSection class="child1">
+                        <div class="link">
+
+                        </div>
+                    </a>
                 </div>
-            </a>
-            <a href=#aboutSection>
-                <div class="itemHome">
-                    <h3>About</h3>
-                    <p>19 years aren't that much, but enough for an about me-section
-                        to exist.
-                    </p>
+                <div class="child3">
+                    <a href=#aboutSection class="child1">
+                        <div class="link">
+
+                        </div>
+                    </a>
                 </div>
-            </a>
-        </section>
+            </div>
+        </div>
     </section>
     <!--The gallery Section-->
     <section id="gallerySection" class="galleryClass">
@@ -260,7 +71,6 @@
                     <img src="drawings/AgonyThumb.png"></a>
                 <a href="drawings/BattlePosition.png" data-lightbox="image-1" data-title="Battle Position">
                     <img src="drawings/BattlePositionThumb.png"></a>
-                </br>
 
                 <a href="drawings/Happy new year.png" data-lightbox="image-1" data-title="Happy new year">
                     <img src="drawings/Happy new yearThumb.png"></a>
@@ -271,7 +81,6 @@
                 <a href="drawings/Smile like you mean it.png" data-lightbox="image-1"
                     data-title="Smile like you mean it">
                     <img src="drawings/Smile like you mean itThumb.png"></a>
-                </br>
 
                 <a href="drawings/Stranded Jeremy.png" data-lightbox="image-1" data-title="Stranded Jeremy">
                     <img src="drawings/Stranded JeremyThumb.png"></a>
@@ -283,8 +92,6 @@
                     <img src="drawings/AnnaThumb.png"></a>
                 <a href="drawings/Auto Pilot.png" data-lightbox="image-1" data-title="Auto Pilot">
                     <img src="drawings/Auto PilotThumb.png"></a>
-
-                </br>
                 <a href="drawings/Transplarent.png" data-lightbox="image-1" data-title="Transplarent">
                     <img src="drawings/TransplarentThumb.png"></a>
                 <a href="drawings/White_Runner.png" data-lightbox="image-1" data-title="White_Runner">
@@ -295,7 +102,6 @@
 
                 <a href="drawings/BokunoWallpaper.png" data-lightbox="image-1" data-title="BokunoWallpaper">
                     <img src="drawings/BokunoWallpaperThumb.png"></a>
-                </br>
                 <a href="drawings/Buttons.png" data-lightbox="image-1" data-title="Buttons">
                     <img src="drawings/ButtonsThumb.png"></a>
                 <a href="drawings/Dropping rose.png" data-lightbox="image-1" data-title="Dropping rose">
@@ -306,7 +112,6 @@
                     <img src="drawings/JetpackThumb.png"></a>
                 <a href="drawings/Sora.png" data-lightbox="image-1" data-title="Sora">
                     <img src="drawings/SoraThumb.png"></a>
-                </br>
                 <a href="drawings/Hers01.png" data-lightbox="image-1" data-title="Hers01">
                     <img src="drawings/Hers01Thumb.png"></a>
 
@@ -366,5 +171,4 @@
     </script>-->
 </body>
 
->>>>>>> 39b2d04025ef3d555127191df512dd56e8fac3e0
 </html>
