Added animations to the home menu

--- a/gallery.html
+++ b/gallery.html
@@ -32,21 +32,24 @@
                 <div class="child1">
                     <a href=#gallerySection class="child1">
                         <div class="link">
-
+                        </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+                        <p>Gallery</p>
                         </div>
                     </a>
                 </div>
                 <div class="child2">
                     <a href=#writtingsSection class="child1">
                         <div class="link">
-
+                        </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+                        <p>Writtings</p>
                         </div>
                     </a>
                 </div>
                 <div class="child3">
                     <a href=#aboutSection class="child1">
                         <div class="link">
-
+                        </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+                            <p>About</p>
                         </div>
                     </a>
                 </div>
