Home is now flexbox, not Grid

--- a/gallery.html
+++ b/gallery.html
@@ -20,35 +20,36 @@
     </div>
 
     <section id="homeSection">
-        <i>
-            <h1 class="titleName">Will Pine</h1>
-        </i>
+        <header>
+            <i>
+                <h1 class="titleName">Will Pine</h1>
+            </i>
 
-        <h3 class="intro">Introduction goes here</h3>
-
+            <h3 class="intro">Introduction goes here</h3>
+        </header>
         <div class="homeContainer">
             <div class="homeContainer2">
 
                 <div class="child1">
                     <a href=#gallerySection class="child1">
                         <div class="link">
-                        </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
-                        <p>Gallery</p>
+                            </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+                            <p>Gallery</p>
                         </div>
                     </a>
                 </div>
                 <div class="child2">
                     <a href=#writtingsSection class="child1">
                         <div class="link">
-                        </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
-                        <p>Writtings</p>
+                            </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+                            <p>Writtings</p>
                         </div>
                     </a>
                 </div>
                 <div class="child3">
                     <a href=#aboutSection class="child1">
                         <div class="link">
-                        </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+                            </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
                             <p>About</p>
                         </div>
                     </a>
@@ -137,22 +138,25 @@
                 <h1>Writtings</h1>
             </div>
 
-            <section class="container flex">
+            <div class="containerWrittings">
+
                 <div class="item">Lovecraft Maybe</div>
                 <div class="item">Gurren Lagann Maybe</div>
                 <div class="item">Drawing Maybe</div>
-            </section>
+            </div>
+
 
         </div>
     </section>
 
     <!--The about me Section-->
     <section id="aboutSection">
-        <div class="divAbout" id="divAboutId">
 
-            <div class="TítuloA">
-                <h1>About</h1>
-            </div>
+
+        <div class="TítuloA">
+            <h1>About</h1>
+        </div>
+        <div class="divAbout" id="divAboutId">
 
         </div>
     </section>
