--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,
+    initial-scale=1.0"
     <title>Willpine - Gallery</title>
     <link href="home.css" rel="stylesheet">
     <link href="gallery.css" rel="stylesheet">
