--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,
-    initial-scale=1.0"
+    initial-scale=1.0">
     <title>Willpine - Gallery</title>
     <link href="home.css" rel="stylesheet">
     <link href="gallery.css" rel="stylesheet">
@@ -142,7 +142,6 @@
             </div>
 
             <div class="containerWrittings">
-
                 <div class="item">Lovecraft Maybe</div>
                 <div class="item">Gurren Lagann Maybe</div>
                 <div class="item">Drawing Maybe</div>
