--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <section id="entries_section">
             </section>
             <section id="about_section">
-
+                <div class="about_div"></div>
             </section>
         </div>
     </main>
