--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/global_layout.css">
     <link rel="stylesheet" href="css/gallery.css">
+    <link rel="stylesheet" href="css/about.css">
     <title>Pinefolio</title>
 </head>
 
@@ -85,7 +86,32 @@
             <section id="entries_section">
             </section>
             <section id="about_section">
-                <div class="about_div"></div>
+                <div class="about_div">
+                    <img src="/resources/art/Wiu-profile.png" alt="A picture of a drawing of me">
+                    <h2>Will Pine</h2>
+                    <p>My name is Willian Yuiti, I'm 20 years old and have 
+                        lived on São Paulo for my entire life and I'm currently
+                        working as a junior developer and ocasionally with 
+                        art comissions. I have experience with front and back-end
+                        programming languages, design, video and image-editing.
+                    </p>
+                    <h3>Programming Languages</h3>
+                    <li>Java - Intermediate</li>
+                    <li>Javascript - Intermediate</li>
+                    <li>Python - Basic</li>
+                    <h3>Video/Image editing Software</h3>
+                    <li>Adobe Premiere - Intermediate</li>
+                    <li>Adobe After Effects - Intermediate</li>
+                    <li>Adobe Photoshop - Intermediate</li>
+                    <li>Krita - Advanced</li>
+                    <li>DaVinci Resolve - Intermediate</li>
+                    <li>Blender (Video-Editing) - Basic</li>
+                    <h3>Education</h3>
+                    <li>Computer Cience Graduate at UNIP - Universidade Paulista</li>
+                    <li>Design Course - SAGA</li>
+                    <li>English Fluency - Minds English School</li>
+                    <li>High School - Colégio Alvorada</li>
+                </div>
             </section>
         </div>
     </main>
