Added entries structure

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/global_layout.css">
     <link rel="stylesheet" href="css/gallery.css">
+    <link rel="stylesheet" href="css/entries.css">
     <link rel="stylesheet" href="css/about.css">
     <title>Pinefolio</title>
 </head>
@@ -84,6 +85,14 @@
                     <img src="resources/art/LollitaThumb.png"></a>
             </section>
             <section id="entries_section">
+                <div>
+                    <h3>How it all Started</h3>
+                    <p>dsadfdflsdkjfhlkjfhsdlkfjhsdkfljhsdlkfjdshlfkjhkjshdfkljhksjdhfjshlda</p></div>
+                <div><p>sdsdasdsaddsadsadasdsadsadsadsadsdsadsadasdsadsaddadsadsadasdsadasdsad
+                    sdfdsfsdfsdfadfasdffasdfdsafasfdsfdsafsdafsdfsdfdsfsdfsdafdffdsfdsfaasfdasfasdf
+                afsdafdsfsdafasdfsdafasdfsdsdsadas </p></div>
+                <div>dsadad</div>
+                <div>asdadasd</div>
             </section>
             <section id="about_section">
                 <div class="about_div">
