Don't know what I was up to till' this point, but I'm gonna keep going

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/gallery.css">
     <link rel="stylesheet" href="css/entries.css">
     <link rel="stylesheet" href="css/about.css">
+    <script type="text/javascript" src="path-to-javascript-file.js"></script>
     <title>Pinefolio</title>
 </head>
 
@@ -14,82 +15,20 @@
     <header>
         <h1>Willpine</h1>
         <nav>
-            <a href="#gallery_section">Gallery</a>
-            <a href="#entries_section">Entries</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="#entries_section">Blog</a>
             <a href="#about_section">About</a>
         </nav>
         <p>Some social networks</p>
     </header>
     <main>
         <div id="global_grid">
-            <section id="gallery_section">
-                <a href="resources/art/World 1.png" data-lightbox="image-1" data-title="World 1">
-                    <img src="resources/art/World 1Thumb.png"></a>
-                <a href="resources/art/Heir.png" data-lightbox="image-1" data-title="Heir">
-                    <img src="resources/art/HeirThumb.png"></a>
-                <a href="resources/art/Agony.png" data-lightbox="image-1" data-title="Agony">
-                    <img src="resources/art/AgonyThumb.png"></a>
-                <a href="resources/art/BattlePosition.png" data-lightbox="image-1" data-title="Battle Position">
-                    <img src="resources/art/BattlePositionThumb.png"></a>
-
-                <a href="resources/art/Happy new year.png" data-lightbox="image-1" data-title="Happy new year">
-                    <img src="resources/art/Happy new yearThumb.png"></a>
-                <a href="resources/art/Ocean Eyes.png" data-lightbox="image-1" data-title="Ocean Eyes">
-                    <img src="resources/art/Ocean EyesThumb.png"></a>
-                <a href="resources/art/Samurai.png" data-lightbox="image-1" data-title="Samurai">
-                    <img src="resources/art/SamuraiThumb.png"></a>
-                <a href="resources/art/Smile like you mean it.png" data-lightbox="image-1"
-                    data-title="Smile like you mean it">
-                    <img src="resources/art/Smile like you mean itThumb.png"></a>
-
-                <a href="resources/art/Stranded Jeremy.png" data-lightbox="image-1" data-title="Stranded Jeremy">
-                    <img src="resources/art/Stranded JeremyThumb.png"></a>
-
-
-                <a href="resources/art/Anna Sleeping.png" data-lightbox="image-1" data-title="Anna Awakens">
-                    <img src="resources/art/Anna SleepingThumb.png"></a>
-                <a href="resources/art/Anna.png" data-lightbox="image-1" data-title="Anna">
-                    <img src="resources/art/AnnaThumb.png"></a>
-                <a href="resources/art/Auto Pilot.png" data-lightbox="image-1" data-title="Auto Pilot">
-                    <img src="resources/art/Auto PilotThumb.png"></a>
-                <a href="resources/art/Transplarent.png" data-lightbox="image-1" data-title="Transplarent">
-                    <img src="resources/art/TransplarentThumb.png"></a>
-                <a href="resources/art/White_Runner.png" data-lightbox="image-1" data-title="White_Runner">
-                    <img src="resources/art/White_RunnerThumb.png"></a>
-                <a href="resources/art/GFace.png" data-lightbox="image-1" data-title="GFace">
-                    <img src="resources/art/GFaceThumb.png"></a>
-
-
-                <a href="resources/art/BokunoWallpaper.png" data-lightbox="image-1" data-title="BokunoWallpaper">
-                    <img src="resources/art/BokunoWallpaperThumb.png"></a>
-                <a href="resources/art/Buttons.png" data-lightbox="image-1" data-title="Buttons">
-                    <img src="resources/art/ButtonsThumb.png"></a>
-                <a href="resources/art/Dropping rose.png" data-lightbox="image-1" data-title="Dropping rose">
-                    <img src="resources/art/Dropping roseThumb.png"></a>
-
-
-                <a href="resources/art/Jetpack.png" data-lightbox="image-1" data-title=Jetpack">
-                    <img src="resources/art/JetpackThumb.png"></a>
-                <a href="resources/art/Sora.png" data-lightbox="image-1" data-title="Sora">
-                    <img src="resources/art/SoraThumb.png"></a>
-                <a href="resources/art/Hers01.png" data-lightbox="image-1" data-title="Hers01">
-                    <img src="resources/art/Hers01Thumb.png"></a>
-
-
-                <a href="resources/art/Cyberpunk revolution.png" data-lightbox="image-1"
-                    data-title="Cyberpunk revolution">
-                    <img src="resources/art/Cyberpunk revolutionThumb.png"></a>
-                <a href="resources/art/Wiu.png" data-lightbox="image-1" data-title="Wiu">
-                    <img src="resources/art/WiuThumb.png"></a>
-                <a href="resources/art/Lollita.png" data-lightbox="image-1" data-title="Lollita">
-                    <img src="resources/art/LollitaThumb.png"></a>
-            </section>
             <section id="entries_section">
                 <div>
                     <h3>How it all Started</h3>
                     <p>dsadfdflsdkjfhlkjfhsdlkfjhsdkfljhsdlkfjdshlfkjhkjshdfkljhksjdhfjshlda</p></div>
                 <div><p>sdsdasdsaddsadsadasdsadsadsadsadsdsadsadasdsadsaddadsadsadasdsadasdsad
-                    sdfdsfsdfsdfadfasdffasdfdsafasfdsfdsafsdafsdfsdfdsfsdfsdafdffdsfdsfaasfdasfasdf
+                    sdfdsfsdfsdfadfasdffasdfdsdafasfdsfdsafsdafsdfsdfdsfsdfsdafdffdsfdsfaasfdasfasdf
                 afsdafdsfsdafasdfsdafasdfsdsdsadas </p></div>
                 <div>dsadad</div>
                 <div>asdadasd</div>
