Cleanup global Css

--- a/index.html
+++ b/index.html
@@ -5,28 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/global_layout.css">
     <link rel="stylesheet" href="css/starbg.css">
-    <link rel="stylesheet" href="css/entries.css">
-    <link rel="stylesheet" href="css/about.css">
-    <script type="text/javascript" src="path-to-javascript-file.js"></script>
+    <script type="text/javascript" src="js/general.js"></script>
     <title>Pinefolio</title>
 </head>
 
 <body>
     <header>
-        <nav>
-            <a href="gallery.html">Gallery</a>
-            <a href="#entries_section">Blog</a>
-            <a href="#about_section">About</a>
-        </nav>
-        <p>Some social networks</p>
     </header>
     <main>
+        <section>
+            <div id="aboutContainer">
+                <p>Nome: Willian Yuiti Motta Oshiro</p>
+            </div>
+        </section>
         <section>
             <div id="stars"></div>
             <div id="stars2"></div>
             <div id="stars3"></div>
         </section>
-        <h1>WillPine</h1>
+        <div class="parallaxImageHome">
+            <img id="willpineLogo" src="resources/imgs/desenho.svg" alt="willpine-logo">
+        </div>
     </main>
     <footer></footer>
 </body>
