--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="css/global_layout.css">
     <link rel="stylesheet" href="css/starbg.css">
+    <link rel="stylesheet" href="css/about.css">
     <script type="text/javascript" src="js/general.js"></script>
     <title>Pinefolio</title>
 </head>
@@ -13,7 +15,10 @@
     <header>
     </header>
     <main>
-        <section>
+        <div id="logoContainer">
+            <img id="willpineLogo" src="resources/imgs/desenho.svg" alt="willpine-logo">
+        </div>
+        <section id="about">
             <div id="aboutContainer">
                 <p>Nome: Willian Yuiti Motta Oshiro</p>
             </div>
@@ -23,9 +28,6 @@
             <div id="stars2"></div>
             <div id="stars3"></div>
         </section>
-        <div class="parallaxImageHome">
-            <img id="willpineLogo" src="resources/imgs/desenho.svg" alt="willpine-logo">
-        </div>
     </main>
     <footer></footer>
 </body>
