Added skillbars and About section

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/global_layout.css">
-    <link rel="stylesheet" href="css/starbg.css">
     <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/skills.css">
     <script type="text/javascript" src="js/general.js"></script>
     <title>Pinefolio</title>
 </head>
@@ -20,13 +20,40 @@
         </div>
         <section id="about">
             <div id="aboutContainer">
-                <p>Nome: Willian Yuiti Motta Oshiro</p>
+                <div class="textContainer">
+                    <p>Nome: Willian Yuiti Motta Oshiro</p>
+                    <p>Idade: 21    Estado civil: Solteiro</p>
+                    <br>
+                    <p>Sou um desenvolvedor full-stack atualmente prestando serviço para a GAMA Saúde como Consultor da CuboConnect.</p>
+                    <p>Hobbies: Design de Logos, vetores, edição de vídeo, desenhos, 3D e fotografia</p>
+                </div>
             </div>
         </section>
-        <section>
-            <div id="stars"></div>
-            <div id="stars2"></div>
-            <div id="stars3"></div>
+        <section id="skills">
+            <div id="skillsContainer">
+                <div class="textContainer">
+                    <p>Java - Intermediário</p>
+                    <div class="skillContainer">
+                        <div class="skill java">75%</div>
+                    </div>
+                    <p>Javascript - Intermediário</p>
+                    <div class="skillContainer">
+                        <div class="skill javascript">70%</div>
+                    </div>
+                    <p>SQL - Básico</p>
+                    <div class="skillContainer">
+                        <div class="skill sql">40%</div>
+                    </div>
+                    <p>C# - Básico</p>
+                    <div class="skillContainer">
+                        <div class="skill csharp">30%</div>
+                    </div>
+                    <p>Python - Básico</p>
+                </div>
+            </div>
+        </section>
+        <section id="exp">
+            <!-- Experiences from most recent to least -->
         </section>
     </main>
     <footer></footer>
