Added blocparty Font and changed logo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/global_layout.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/skills.css">
+    
     <script type="text/javascript" src="js/general.js"></script>
     <title>Pinefolio</title>
 </head>
@@ -20,11 +21,16 @@
         </div>
         <section id="about">
             <div id="aboutContainer">
+                <div class="titleContainer">
+                    Sobre
+                </div>
+                <div class="separationBar"></div>
                 <div class="textContainer">
-                    <p>Nome: Willian Yuiti Motta Oshiro</p>
+                    <p class="name">Nome: Willian Yuiti Motta Oshiro</p>
                     <p>Idade: 21    Estado civil: Solteiro</p>
                     <br>
                     <p>Sou um desenvolvedor full-stack atualmente prestando serviço para a GAMA Saúde como Consultor da CuboConnect.</p>
+                    <br>
                     <p>Hobbies: Design de Logos, vetores, edição de vídeo, desenhos, 3D e fotografia</p>
                 </div>
             </div>
@@ -48,7 +54,6 @@
                     <div class="skillContainer">
                         <div class="skill csharp">30%</div>
                     </div>
-                    <p>Python - Básico</p>
                 </div>
             </div>
         </section>
