--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/global_layout.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/skills.css">
+    <link rel="stylesheet" href="css/exp.css">
     
     <script type="text/javascript" src="js/general.js"></script>
     <title>Pinefolio</title>
@@ -17,7 +18,7 @@
     </header>
     <main>
         <div id="logoContainer">
-            <img id="willpineLogo" src="resources/imgs/desenho.svg" alt="willpine-logo">
+            <img id="willpineLogo" src="resources/imgs/willpine-logo-v2.svg" alt="willpine-logo">
         </div>
         <section id="about">
             <div id="aboutContainer">
@@ -36,6 +37,10 @@
             </div>
         </section>
         <section id="skills">
+                <div class="titleContainer">
+                    Competencias
+                </div>
+                <div class="separationBar"></div>
             <div id="skillsContainer">
                 <div class="textContainer">
                     <p>Java - Intermediário</p>
@@ -58,7 +63,13 @@
             </div>
         </section>
         <section id="exp">
-            <!-- Experiences from most recent to least -->
+                <div class="titleContainer">
+                    Experiencia
+                </div>
+                <div class="separationBar"></div>
+            <div class="expContainer">
+                <div class="textContainer"></div>
+            </div>
         </section>
     </main>
     <footer></footer>
