--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
     <meta charset="UTF-8">
@@ -13,15 +13,6 @@
 
 <body>
     <header>
-        <a href="index.html">
-            <h1>Willpine</h1>
-        </a>
-        <nav>
-            <a href="gallery.html">Gallery</a>
-            <a href="#entries_section">Blog</a>
-            <a href="#about_section">About</a>
-        </nav>
-        <p>Some social networks</p>
     </header>
 
     <main>
