--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     
     <script type="text/javascript" src="js/general.js"></script>
     <title>Pinefolio</title>
+    <link rel="icon" href="resources/imgs/icon200x200.png" type="image/icon type">
 </head>
 
 <body>
